--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,23 +1,23 @@
-name:Basic Commands
+name: Basic Commands
 
 on:
  push:
   branches:
    -main
 schedule:
- -cron:"0 0 ***"#Every day at midnight UTC
+ - cron: "0 0 ***"#Every day at midnight UTC
 workflow_dispatch:# Manual trigger
 
-Jobs:
+jobs:
  demo-commands:
-  runs-on:ubuntu-latest
+  runs-on: ubuntu-latest
 
 steps:
- -name:Show current working directory
+ -name: Show current working directory
  run:pwd
 
--name:List files in the directory
+-name: List files in the directory
 run:ls-la
 
--name:print today's date
+-name: print today's date
 run:date
